# learning_and_experiments

VcSol/: VcSol.sln
VcSol/FirstOne/: FirstOne.vcproj  Main.cpp
VcSol/SimpleFramework/: IPlatformContext.h  IPlugin.h  Main.cpp  PluginManager.cpp  PluginManager.h  SimpleContext.cpp  SimpleContext.h  SimpleFramework.vcproj
VcSol/SimplePlugin/: PluginDef.cpp  PluginDef.h  PluginEntry.cpp  PluginEntry.h  SimplePlugin.vcproj  plugin.def
VcSol/SimplePlugin2/: PluginDefinition.cpp  PluginDefinition.h  PluginEntry.cpp  PluginEntry.h  SimplePlugin2.vcproj  plugin.def
VcSol/TestCpp/: Main.cpp  TestCpp.vcproj
generic_params/: CMakeLists.txt
generic_params/data/: CMakeLists.txt  Field.hpp  Group.hpp  Model.hpp  Param.hpp  ParamTypes.hpp  Value.hpp
quoter/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SimpleParser.cpp  SimpleParser.h  main.cpp  quoter.pro
vplotter/: MainWindow.cpp  MainWindow.h  PlotterWidget.cpp  PlotterWidget.h  main.cpp  vplotter.pro
